# wsrs

./: .gitignore  Cargo.toml  LICENSE  README.md
client/: Cargo.toml
client/src/: lib.rs
doc/: memo.md  spec.md
frontend/: package-lock.json  package.json
frontend/src/routes/: +page.svelte
script/: client-wasm-build.sh  client-wasm-watch-build.sh
server/: Cargo.toml
server/src/: main.rs
server/src/domain/: room.rs
server/src/payload/create_room/: create_room_response.rs
server/src/payload/send_message/: send_message_request_data.rs
server/src/server/: connection.rs  mod.rs
server/src/server/result_mapper/: abstract_result_mapper.rs  mod.rs
server/src/server/result_mapper/create_room/: create_room_result_mapper.rs
server/src/server/result_mapper/join_room/: join_room_result_mapper.rs
server/src/server/result_mapper/leave_room/: leave_room_result_mapper.rs
server/src/server/result_mapper/send_message/: send_message_result_mapper.rs
server/src/state/: mod.rs  room_manager.rs  user_manager.rs
server/src/usecase/: abstract_handler.rs  mod.rs
server/src/usecase/create_room_usecase/: create_room_handler.rs
server/src/usecase/join_room_usecase/: join_room_handler.rs
server/src/usecase/leave_room_usecase/: leave_room_handler.rs
server/src/usecase/send_message_usecase/: send_message_handler.rs
shared-types/: Cargo.toml
shared-types/src/payload/: mod.rs  (+1 more)
src/: main.rs
src/domain/: room.rs  user.rs
src/payload/: mod.rs  request.rs
src/server/: connection.rs
src/state/: room_manager.rs  user_manager.rs
src/usecase/: mod.rs
(+9 files in other folders)
