[package]
name = "wsrs"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.31"
tokio = { version = "1.42.0", features = ["full"] }
tokio-tungstenite = "0.26.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tungstenite = "0.26.1"
uuid = { version = "1.11.0", features = ["v4"] }

[profile.release]
debug = 1
