[package]
name = "client"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
console_error_panic_hook = { version = "0.1.7", optional = true }
web-sys = { version = "0.3.76", features = [
    "BinaryType",
    "Blob",
    "ErrorEvent",
    "FileReader",
    "MessageEvent",
    "ProgressEvent",
    "WebSocket",
] }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[dependencies.shared-types]
path = "../shared-types"

[profile.release]
opt-level = "s"
