[package]
name = "wsrs"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.85"
futures = "0.3.31"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
tokio = { version = "1.42.0", features = ["full"] }
tokio-tungstenite = "0.26.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tungstenite = "0.26.1"
uuid = { version = "1.11.0", features = ["v4"] }

[dependencies.shared-types]
path = "../shared-types"

[profile.release]
debug = 1
